# BMPluginBuilder

./: .gitignore  README.md
cli/: CMakeLists.txt  bmplugincreator.cpp  bmplugincreator.h  main.cpp  md5.c  md5.h
gui/: BMPluginBuilder.pro  FilesTab.cpp  FilesTab.h  FormMain.cpp  FormMain.h  Info.plist  MetaTab.cpp  MetaTab.h  PluginFactory.cpp  PluginFactory.h  app.icns  bmpluginbuilder_de.ts  main.cpp  md5.c  md5.h  resource.qrc  resource.rc
